# HyperStrike

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
AssetCompiler/: Main.cpp
Client/: Main.cpp  Window.cpp  Window.hpp
Engine/: Logger.cpp  Logger.hpp
Server/: Main.cpp
